# tutorial_parallel_gazebo

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_FiveBarLink.yaml
launch/: robot_urdf.launch.py
meshes/: HipLegLeft_Link.STL  HipLegRight_Link.STL  KneelLegLeft_Link.STL  KneelLegRight_Link.STL  Wheel_Link.STL  base_link.STL
urdf/: FiveBarLink.csv  FiveBarLink.urdf  five_bar_link_wheel.urdf
